--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>EOS Thanks</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <!-- page content -->
-  </body>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+</head>
+<body>
+    <div class="stream-ending">STREAM IS ENDING</div>
+    <div class="thanks-message">THANKS FOR YOUR SUPPORT</div>
+    <div class="logo"><img src="img/logo.png" alt="logo"></div>
+</body>
 </html>
